moving more blog templates

--- a/blog/templates/blog/edit.html
+++ b/blog/templates/blog/edit.html
@@ -28,7 +28,7 @@
   <div class="page-header">
     <h2>Other posts</h2>
   </div>
-  {% include "_partial-post-list.html" with current_post=post %}
+  {% include "blog/_partial-list.html" with current_post=post %}
   {% endif %}
   <div class="modal fade" id="image-modal">
     <div class="modal-dialog">
