--- a/txrx/templates/_paginator.html
+++ b/txrx/templates/_paginator.html
@@ -3,10 +3,15 @@
   <ul class="pagination">
     <li{% if not paginator.has_previous %} class="disabled"{% endif %}>
       <a href="?{{ paginator.previous_qs }}">&laquo;</a></li>
+    {% comment %}
     {% for num in paginator.page_range %}
+    {% if num|add:-5 < paginator.number and paginator.number|add:-5 < num %}
     <li{% if num == paginator.number %} class="active"{% endif %}>
       <a href="?page={{ num }}">{{ num }}</a></li>
+    {% endif %}
     {% endfor %}
+    {% endcomment %}
+    <li><a href="#" style="color: inherit;">Page {{ paginator.number }} of {{ paginator.num_pages }}</a></li>
     <li{% if not paginator.has_next %} class="disabled"{% endif %}>
       <a href="?{{ paginator.next_qs }}">&raquo;</a></li>
   </ul>
