--- a/txrx/templates/admin/index.html
+++ b/txrx/templates/admin/index.html
@@ -35,7 +35,7 @@
                     <a href="{{ event.get_admin_url }}">
                       <i class="icon-edit" title="Edit Event in Admin"></i></a>
                     {% if event.session %}
-                    <a href="{{ event.course.get_admin_url }}">
+                    <a href="{{ event.session.course.get_admin_url }}">
                       <i class="icon-pencil" title="Edit Course in Admin"></i></a>
                     {% endif %}
                     {{ event.short_name }}
