--- a/txrx/templates/sides/_contact_us.html
+++ b/txrx/templates/sides/_contact_us.html
@@ -4,6 +4,11 @@
     <li><b>General Inquiry</b></li>
     <li>Please contact us using <a href="{% url "contact" %}">this form</a>.</li>
     <li>&nbsp;</li>
+    <li><b>Hours of Operation</b></li>
+    <li>Monday to Friday: 10 am to 10 pm</li>
+    <li>Saturday: 9 am - 8 pm</li>
+    <li>Sunday: 10 am - 7 pm</li>
+    <li>&nbsp;</li>
     <li><b>Mailing Address</b></li>
     <li>
       <a href="https://goo.gl/maps/xD5ST">
