--- a/thing/templates/thing/edit.html
+++ b/thing/templates/thing/edit.html
@@ -4,8 +4,11 @@
 {% block header %}{% endblock %}
 {% block title %}Add/Edit Project{% endblock %}
 {% block content %}
+<script>django={jQuery:$}</script>
+<script src="/static/admin/js/core.js"></script>
 <form method="POST">
   {% csrf_token %}
   {% include "_form.html" %}
+  <input type="submit" class="btn btn-success">
 </form>
 {% endblock %}
