--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -25,18 +25,15 @@
     <script src="{{ STATIC_URL }}js/jsi18n.js"></script>
     <script src="{{ STATIC_URL }}mptt_comments/js/mptt_comments.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
-    <script src="{{ STATIC_URL }}js/jvfloat.js"></script>
+    <script src="{{ STATIC_URL }}cv/float.js"></script>
     {% endcompress %}
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}lightbox/css/lightbox.css" />
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/jvfloat.css" />
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}cv/float.css" />
     <script>
       var f = new Favico({
         animation : 'popFade'
       });
       f.badge({{ pending_evaluations.count }});
-      $(function(){
-        $(".jvFloatForm [placeholder]").jvFloat();
-      });
     </script>
     {% block head %}{% endblock %}
     <meta property="og:title" content="{% block fb_title %}TXRX Labs: Houston's Hackerspace{% endblock %}" />
