--- a/txrx/templates/contact.html
+++ b/txrx/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form method="POST" class="jvFloatForm">
+<form method="POST" class="cvfloat">
   {% csrf_token %}
   {% include "_form.html" %}
   <input type="submit" class="btn btn-primary" />
