--- a/txrx/templates/comments/display_comments_toplevel.html
+++ b/txrx/templates/comments/display_comments_toplevel.html
@@ -1,39 +1,31 @@
 {% load i18n %}
 {% load mptt_comments_tags %}
 
-<div id="comments">
-  {% if comments %}
-  <h2>{% trans "Comments" %}</h2>
-  {% if request.user.is_authenticated %}
-  <div class="alert alert-error reply-warning">
-    If you want to respond to a comment, please click "Post Reply" underneath that comment.
-    This way the comment author will receive a notification of your response.
-  </div>
-  {% endif %}
-  {% endif %}
-  
-  <div id="mptt-comments-tree" class="block-comments-tree">
-    {{ comments_html|safe }}
-  </div>
-  
-  {% include "comments/_comments_remaining.html" %}
+{% get_mptt_comment_list for object as comments %}
 
-  {% if request.user.is_authenticated %}
-  <h2 class="section_title">{% trans "Post a new comment" %}</h2>
+{% if comments %}
 
-  <div class="new_comment_form_wrapper">
-    {% get_mptt_comment_form for object as form %}
+<h2>{% trans "Comments" %}</h2>
 
-    {% include "comments/form.html" with warn=comments %}
-  </div>
-  {% else %}
-  Please <a href="/accounts/login?next={{ request.path }}">login or register</a> to comment.
-  {% endif %}
-  <script>
-    $(function() {
-      var active_comment = $(window.location.hash);
-      if (active_comment.length) {$("."+active_comment[0].id).click(); }
-    });
-  </script>
-</div> 
+{% endif %}
 
+<div id="mptt-comments-tree" class="block-comments-tree">
+
+{% if comments %}
+
+    {% include "comments/display_comments_tree.html" %}
+
+{% endif %}
+
+</div>
+
+{% include "comments/_comments_remaining.html" %}
+
+
+<h2 id="post_new_comment">{% trans "Post a new comment" %}</h2>
+
+<div class="new_comment_form_wrapper">
+{% get_mptt_comment_form for object as form %}
+
+{% include "comments/form.html" %}
+</div>
