--- a/txrx/templates/ct.html
+++ b/txrx/templates/ct.html
@@ -4,7 +4,7 @@
 <script src="{{ STATIC_URL }}js/can.jquery.js"></script>
 <script src="{{ STATIC_URL }}js/app.js"></script>
 <script type="text/mustache" src="{{ STATIC_URL }}mustache/mptt_comment.html" id="mptt_comment"></script>
-<div data-mptt data-object_pk="42" data-name="course" data-app="course"></div>
+<div data-mptt data-object_pk="42" data-content_type="course.course"></div>
 <style>
 .mptt-comment {border: 1px solid;padding:5px;}
 {% endblock %}
