--- a/txrx/templates/ct.html
+++ b/txrx/templates/ct.html
@@ -7,4 +7,15 @@
 <div data-mptt data-object_pk="42" data-content_type="course.course"></div>
 <style>
 .mptt-comment {border: 1px solid;padding:5px;}
+.comments .comments_list .comment {
+  border: 1px solid rgb(230,230,230);
+  border-radius: 5px;
+  margin-bottom: 2px;
+  margin-left: 0;
+  padding-right: 5px;
+}
+.comments .l0 { background: #f8f8f8; }
+.comments .l1 { background: white; }
+
+</style>
 {% endblock %}
