--- a/txrx/static/less/map.less
+++ b/txrx/static/less/map.less
@@ -1,8 +1,11 @@
-@mapWidth: 1000px;
 #map {
+  height: 100%;
+  left: 0;
   outline: 1px black solid;
-  height: @mapWidth*3/5;
-  width: @mapWidth;
+  padding: 0 30px;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 .room_marker {
   box-shadow: 1px 1px 2px black, inset 1px 1px 1px rgba(255,255,255,0.75);
@@ -32,7 +35,7 @@
     }
     span {
       display: inline-block;
-      max-width: 195px;
+      max-width: 300px;
       vertical-align: middle;
     }
   }
@@ -41,4 +44,9 @@
 #floorplan_wrapper {
   position: absolute;
   margin-top: 80px;
+  .legend {
+    bottom: 50px;
+    position: absolute;
+    right: 50px;
+  }
 }
