--- a/txrx/templates/ct.html
+++ b/txrx/templates/ct.html
@@ -1,21 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<script src="{{ STATIC_URL }}js/can.jquery.js"></script>
-<script src="{{ STATIC_URL }}js/app.js"></script>
-<script type="text/mustache" src="{{ STATIC_URL }}mustache/mptt_comment.html" id="mptt_comment"></script>
-<div data-mptt data-object_pk="42" data-content_type="course.course"></div>
-<style>
-.mptt-comment {border: 1px solid;padding:5px;}
-.comments .comments_list .comment {
-  border: 1px solid rgb(230,230,230);
-  border-radius: 5px;
-  margin-bottom: 2px;
-  margin-left: 0;
-  padding-right: 5px;
-}
-.comments .l0 { background: #f8f8f8; }
-.comments .l1 { background: white; }
-
-</style>
+<script src="{{ STATIC_URL }}js/comments.js"></script>
+<comment-list data-object_pk="42" data-content_type="course.course"></comment-list>
 {% endblock %}
+
+{% block extrajs %}{% include "_comment_media.html" %}{% endblock %}
