--- a/txrx/static/less/comment.less
+++ b/txrx/static/less/comment.less
@@ -8,6 +8,17 @@ comment-list comment {
   margin-bottom: 2px;
   margin-left: 0;
   padding: 5px;
+  .comment_content:empty:before {
+    background: rgba(255,255,255,0.3);
+    border: .5em grey dashed;
+    content: "THIS COMMENT INTENTIONALLY LEFT BLANK";
+    display: block;
+    height: 5em;
+    line-height: 4em;
+    opacity: 0.75;
+    text-align: center;
+    width: 100%;
+  }
   &.l0 { background: #f8f8f8; }
   &.l1 { background: white; }
 }
