--- a/txrx/static/less/comment.less
+++ b/txrx/static/less/comment.less
@@ -22,3 +22,11 @@ comment-list comment {
   &.l0 { background: #f8f8f8; }
   &.l1 { background: white; }
 }
+
+comment-list .comment_actions a {
+  border-left: 2px solid #ddd;
+  display: inline-block;
+  margin: 5px 0 0;
+  padding: 0 9px;
+  &:first-child { border: 0; padding-left: 0; }
+}
