--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -136,6 +136,7 @@
     border-top: 1px solid;
     bottom: 0;
     line-height: 1em;
+    min-height: 27px;
     margin: 0;
     padding: 10px 80px 2px 0;
     position: absolute;
