--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -1,8 +1,6 @@
 .wmd-panel {margin: 0; }
 section { padding-bottom: 25px; }
 section.banner { padding-bottom: 35px; }
-.comment:target > .comment_outer { background-color: @successBackground; }
-[ng-cloak] { display: none; }
 
 .transition(@value) {
   transition: @value;
@@ -144,8 +142,8 @@ form.filters { margin-bottom: 10px; }
     cursor: pointer;
     text-align: left;
     width: 100%;
+    &.selected { font-weight: bold; }
   }
-  input:checked ~ label { font-weight: bold; }
   .child { display:none; }
   // child categories are temporarily disabled
   //input:checked ~ .child { display: block; }
@@ -295,46 +293,6 @@ h3.date {
   }
 }
 
-/* comments */
-h2.section_title {
-  background: @well-bg;
-  font-size: 18px;
-  padding: 0 10px;
-}
-
-#comments {
-  h2 { margin: 20px 0 5px; }
-  textarea { height: 150px; max-width: 100%; width: 350px; }
-}
-
-#mptt-comments-tree {
-  min-height: 20px;
-}
-
-#mptt-comments-tree .comment {
-  .comment:last-child { margin-bottom: 0; }
-  &.collapsed {
-    height: 20px;
-    overflow: hidden;
-    .comment {
-      display: none;
-    }
-    .expand-link:before { content: "[+]"; }
-  }
-  .expand-link:before { content: "[-]"; font-weight: normal; font-family: monospace; }
-  a {
-    text-decoration: none;
-    cursor: pointer;
-  }
-}
-
-.comment_form .md {
-  display: none;
-  margin-bottom: 20px;
-  &.show { display: block; }
-  tr { border: 1px gray solid; border-left: 0; }
-  td { border-left: 1px gray solid; }
-}
 
 .photorow :target {
   position: relative;
