--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -213,6 +213,21 @@ label .help-text {
   margin-left: 25px;
 }
 
+.hidden_checkbox + label, comment-form form {
+  position: relative;
+  &.loading:before {
+    background: fade(@well-bg,80%);
+    content: "Loading...";
+    display: block;
+    height: 100%;
+    left: 0;
+    line-height: 200px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 100%;
+  }
+}
 .hidden_checkbox {
   display: none;
   &:checked + label {
@@ -223,23 +238,10 @@ label .help-text {
   + label {
     cursor: pointer;
     max-width: 100%;
-    position: relative;
     h3 {
       height: 56px; // should match aesthetic of the tool lab detail page
       overflow: hidden;
       word-wrap: break-word;
-    }
-    &.loading:before {
-      background: fade(@well-bg,90%);
-      content: "Loading...";
-      display: block;
-      height: 100%;
-      left: 0;
-      line-height: 200px;
-      position: absolute;
-      text-align: center;
-      top: 0;
-      width: 100%;
     }
   }
 }
