removing mptt_comments templates

--- a/txrx/static/less/comment.less
+++ b/txrx/static/less/comment.less
@@ -1,6 +1,9 @@
 comment-list,comment,comment-form {
   display: block;
 }
+comment-list {
+  max-width: 600px;
+}
 
 comment-list comment {
   border: 1px solid rgb(230,230,230);
