comment styling merged into new files, away from mptt_comments

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -137,7 +137,7 @@
     {# {% include "course/_instructor_panel.html" %} #}
     {% endif %}
   </div>
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-sm-8 col-md-9">
     <comment-list data-object_pk="{{ course.pk }}" data-content_type="course.course"></comment-list>
   </div>
 </div>
