--- a/thing/templates/thing/detail.html
+++ b/thing/templates/thing/detail.html
@@ -57,7 +57,7 @@
     </section>
   </div>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12 col-sm-8 col-md-9">
   <comment-list data-object_pk="{{ thing.pk }}" data-content_type="thing.thing"></comment-list>
 </div>
 {% endblock %}
