--- a/tool/templates/tool/tool_detail.html
+++ b/tool/templates/tool/tool_detail.html
@@ -49,7 +49,7 @@
     </div>
     {% endif %}
   </div>
-  <div class="col-xs-12">
+  <div class="col-xs-12 col-sm-8 col-md-9">
     <comment-list data-object_pk="{{ tool.pk }}" data-content_type="tool.tool"></comment-list>
   </div>
 </div>
