--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -190,6 +190,8 @@
   }
 }
 
+#unscheduled-courses .fee { display: none; }
+
 @media (max-width: @screen-xs-max) {
   .SessionList .fee {
     float: right;
