--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -193,7 +193,7 @@
 #unscheduled-courses .fee { display: none; }
 
 @media (max-width: @screen-xs-max) {
-  .SessionList .fee {
+  .SessionList .price {
     float: right;
     font-size: 24px;
     line-height: 1;
