this is why you dont fix bugs while biking

--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -190,10 +190,10 @@
   }
 }
 
-#unscheduled-courses .fee { display: none; }
+#unscheduled-courses .price { display: none; }
 
 @media (max-width: @screen-xs-max) {
-  .SessionList .price {
+  .SessionList .fee {
     float: right;
     font-size: 24px;
     line-height: 1;
