--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="modal" onclick="toggleCourses();">
           <span aria-hidden="true">&times;</span>
           <span class="sr-only">Close</span></button>
-        <h4 class="modal-title">Shopping Cart</h4>
+        <h4 class="modal-title">Shopping Cart monkey</h4>
       </div>
       <div class="modal-body">
         <script type="text/javascript" src="{{ STATIC_URL }}js/simpleCart.js"></script>
@@ -37,30 +37,6 @@
           </div>
         </div>
         <script>
-function createCookie(name,value,days) {
-  if (days) {
-    var date = new Date();
-    date.setTime(date.getTime()+(days*24*60*60*1000));
-    var expires = "; expires="+date.toGMTString();
-  }
-  else var expires = "";
-  document.cookie = name+"="+value+expires+"; path=/";
-}
-
-function readCookie(name) {
-  var nameEQ = name + "=";
-  var ca = document.cookie.split(';');
-  for(var i=0;i < ca.length;i++) {
-    var c = ca[i];
-    while (c.charAt(0)==' ') c = c.substring(1,c.length);
-    if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-  }
-  return null;
-}
-
-function eraseCookie(name) {
-  createCookie(name,"",-1);
-}
 function simple_cart_ready() {
   {% if "success" in request.GET %}simpleCart.empty();{% endif %}
   if (!!readCookie("checkout_initiated")) {simpleCart.empty(); eraseCookie("checkout_initiated");}
