--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -15,6 +15,7 @@
 <script>var CART = {{ cart|safe }};</script>
 <script src="/products.js"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/store.tag"></script>
+<script type="riot/tag" src="{{ STATIC_URL }}tags/cart.tag"></script>
 <script>
 riot.mount("product-list",{});
 </script>
