adding animation to buttons

--- a/main/static/less/store.less
+++ b/main/static/less/store.less
@@ -1,18 +1,28 @@
-product .price {
-  font-size: 20px;
-  height: 34px;
-  line-height: 34px;
-  text-align: center;
-  vertical-align: middle;
+product {
+  .name {
+    height: 40px;
+  }
+  .price {
+    font-size: 20px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    vertical-align: middle;
+  }
 }
 
 @rowHeight: 34px;
 product {
-  .img {
-    height: 140px;
+  .img,.cart-buttons {
+    transition: height 0.25s;
     overflow: hidden;
   }
-  .incart .img {
-    height: 140px - @rowHeight*2;
+  .cart-buttons { height: 0; }
+  .img {
+    height: 140px;
+  }
+  .incart {
+    .img { height: 140px - @rowHeight*2; }
+    .cart-buttons { height: @rowHeight*2; }
   }
 }
