--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -11,7 +11,9 @@
 {% block main %}
 <h1 class="page_title">
   {{ course }}
-  {% if request.user.is_superuser %}<a href="/admin/course/course/{{ course.pk }}"><i class="fa fa-pencil"></i></a>{% endif %}
+  {% if request.user.is_superuser %}
+  <a href="/admin/course/course/{{ course.pk }}"><i class="fa fa-pencil-square"></i></a>
+  {% endif %}
 </h1>
 <div class="course-detail row">
   <div class="col-sm-4 col-md-5">
