--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -99,7 +99,7 @@
     text-align: center;
     width: 100%;
     .instructor-link { font-size: 2em; left: 5px; position: absolute; top: 0; }
-    .admin-link { font-size: 2em; left: 5px; position: absolute; bottom: 0; }
+    .admin-link { font-size: 2em; position: absolute; right: 5px; top: 0; }
     .full { color: @brand-danger; }
   }
   .add_session_box {
