--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -56,9 +56,12 @@
         </a>
         <ul class="dropdown-menu">
           {% if user.is_authenticated %}
-          {% if user.is_staff %}<li><a href="/admin/"><i class="icon-cog"></i> Admin</a></li>{% endif %}
-          <li><a href="{% url "logout" %}"><i class="icon-off"></i> Log out</a></li>
-          <li><a href="{% url "account_settings" %}"><i class="icon-cog"></i> Settings</a></li>
+          {% if user.is_staff %}
+          <li><a href="/admin/"><i class="fa fa-pencil-square"></i> Admin</a></li>
+          <li><a href="{% url "receipts" %}"><i class="fa fa-paypal"></i> Recepts</a>
+          {% endif %}
+          <li><a href="{% url "logout" %}"><i class="fa fa-power-off"></i> Log out</a></li>
+          <li><a href="{% url "account_settings" %}"><i class="fa fa-gear"></i> Settings</a></li>
           {% for notification in request|get_notifications %}
           <li><a href="{{ notification.url }}"{% if notification.new_count %}
                  data-reddot="{{ notification.new_count }}"{% endif %}>
