--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -35,8 +35,13 @@
       <li>
         <button class="btn btn-primary btn-cart" data-toggle="modal" data-target="#cartModal">
           <i class="fa fa-shopping-cart"></i>
-          <span class="simpleCart_quantity"></span> items
+          <span class="simpleCart_quantity"></span> classes
           (<span class="simpleCart_total"></span>)
+        </button>
+        <button class="btn btn-primary store-button" onclick="openCart();return false;">
+          <i class="fa fa-shopping-cart"></i>
+          <span class="quantity"></span> items
+          (<span class="total"></span>)
         </button>
       </li>
       <li class="social">
