--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -5,8 +5,8 @@
   font-family: @font1;
   font-weight: bold;
 }*/
-body { margin: 0 auto 50px; width: 100%; }
-html, body { overflow-x: hidden; }
+body { margin: 0 auto 50px; width: 100%;}
+body,html { overflow-x: hidden; }
 
 @media (max-width: @screen-xs-max) {
   .container{
