styling new store admin view

--- a/main/static/less/cart.less
+++ b/main/static/less/cart.less
@@ -1,6 +1,7 @@
 .store-button { display:none; }
 cart {
   overflow-y: scroll;
+  z-index:1000;
   &,& .mask {
     bottom: 0;
     left: 0;
@@ -15,7 +16,7 @@ cart {
     max-width: 100%;
     position: relative;
     width: 600px;
-    z-index: 1000
+    z-index: 1001
   }
   .header {
     border-bottom: 1px solid #e5e5e5;
