--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -43,6 +43,7 @@
     <meta property="fb:app_id" content="" />
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
     <![endif]-->
     {% block analytics %}{{ ANALYTICS_CODE|safe }}{% endblock %}
     {% comment %}
